Add Rabbit Event